--- a/catalog.html
+++ b/catalog.html
@@ -104,13 +104,13 @@
           <h3>Сортировать:</h3>
           <div class="sort-container">
             <ul class="sort-item-1">
-              <li class="sort-item-1-active">по цене</li>
-              <li>по типу</li>
-              <li>по названию</li>
+              <li><a class="sort-item-1-active" href="#">по цене</a></li>
+              <li><a href="#">по типу</a></li>
+              <li><a href="#">по названию</a></li>
             </ul>
             <ul class="sort-item-2">
-              <li class="up sort-item-2-active"></li>
-              <li class="down"></li>
+              <li><a class="up sort-item-2-active" href="#"></a></li>
+              <li><a class="down" href="#"></a></li>
             </ul>
           </div>
         </div>
@@ -172,13 +172,13 @@
           </li>
         </ul>
 
-        <div class="paginator">
-          <a class="disabled prev" href="#prev">Предыдущая</a>
-          <a class="current" href="#1">1</a>
-          <a href="#2">2</a>
-          <a href="#3">3</a>
-          <a class="next" href="#next">Следующая</a>
-        </div>
+        <ul class="paginator">
+          <li class="disabled"><a class="disabled prev" href="#prev">Предыдущая</a></li>
+          <li><a class="current" href="#1">1</a></li>
+          <li><a href="#2">2</a></li>
+          <li><a href="#3">3</a></li>
+          <li><a class="next" href="#next">Следующая</a></li>
+        </ul>
 
       </section>
     </div>
@@ -188,8 +188,7 @@
     <section class="contacts">
       <div class="yandex-map">
 
-      <!-- !<div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт-Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSEQPQFtjfXVyeXpgYQ==/?l=trf%2Ctrfe&ll=30.319210%2C59.938928&utm_medium=mapframe&utm_source=maps&z=15.8" style="color:#eee;font-size:12px;position:absolute;top:14px;">Пробки в Москве — Яндекс.Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CKaSQX38" width="1440" height="416" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
--->
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123754!2d30.320894615769383!3d59.938796869048296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1583775264922!5m2!1sru!2sru" width="1440" height="416" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 
       </div>
       <div class="contacts-item">
