--- a/index.html
+++ b/index.html
@@ -139,8 +139,7 @@
     <section class="contacts">
       <div class="yandex-map">
 
-       <div style="position:relative;overflow:hidden;"><a href="https://yandex.ru/maps/2/saint-petersburg/?utm_medium=mapframe&utm_source=maps" style="color:#eee;font-size:12px;position:absolute;top:0px;">Санкт-Петербург</a><a href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSEQPQFtjfXVyeXpgYQ==/?l=trf%2Ctrfe&ll=30.319210%2C59.938928&utm_medium=mapframe&utm_source=maps&z=15.8" style="color:#eee;font-size:12px;position:absolute;top:14px;">Пробки в Москве — Яндекс.Карты</a><iframe src="https://yandex.ru/map-widget/v1/-/CKaSQX38" width="1440" height="416" frameborder="1" allowfullscreen="true" style="position:relative;"></iframe></div>
-
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123754!2d30.320894615769383!3d59.938796869048296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1583775264922!5m2!1sru!2sru" width="1440" height="416" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
 
       </div>
       <div class="contacts-item">
