--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+
 <html lang="ru">
   <head>
     <meta charset="utf-8">
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+    <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+    <input class="visually-hidden" type="radio" id="product-3" name="toggle">
     <header class="header-top">
       <div class="header-top-container">
         <div class="header-top-container-1">
@@ -38,8 +41,20 @@
               для вашего сайта или мобильного приложения</p>
               <a href="#">Узнать больше</a>
             </div>
+          </section>
+
+          <section class="second-slider">
+            <input class="visually-hidden btn-1" type="radio" id="slide-1" name="toggle" checked>
+            <input class="visually-hidden btn-2" type="radio" id="slide-2" name="toggle">
+            <input class="visually-hidden btn-3" type="radio" id="slide-3" name="toggle">
             <div class="slider">
-              <input class="btn-1" type="radio" id="btn-1" name="toggle" checked>
+              <div class="slider-controls">
+                <label for="slide-1">Первый</label>
+                <label for="slide-2">Второй</label>
+                <label for="slide-3">Третий</label>
+              </div>
+
+    <!--          <input class="btn-1" type="radio" id="btn-1" name="toggle" checked>
               <input class="btn-2" type="radio" id="btn-2" name="toggle">
               <input class="btn-3" type="radio" id="btn-3" name="toggle">
               <div class="slider-controls">
@@ -54,6 +69,7 @@
                   <img src="img/slide3.jpg" alt="фотография с монитором и телефоном" width="759" height="411">
                 </div>
               </div>
+          -->
             </div>
           </section>
         </div>
@@ -139,7 +155,7 @@
     <section class="contacts">
       <div class="yandex-map">
 
-      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123754!2d30.320894615769383!3d59.938796869048296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1583775264922!5m2!1sru!2sru" width="1440" height="416" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
+      <iframe class="google-maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.5989424123754!2d30.320894615769383!3d59.938796869048296!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca5ba729%3A0xea9c53d4493c879f!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LCDQodCw0L3QutGCLdCf0LXRgtC10YDQsdGD0YDQsywgMTkxMTg2!5e0!3m2!1sru!2sru!4v1583775264922!5m2!1sru!2sru" width="1440" height="416"  allowfullscreen=""></iframe>
 
       </div>
       <div class="contacts-item">
