--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-
+<!DOCTYPE html>
 <html lang="ru">
   <head>
     <meta charset="utf-8">
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
-    <input class="visually-hidden" type="radio" id="product-2" name="toggle">
-    <input class="visually-hidden" type="radio" id="product-3" name="toggle">
     <header class="header-top">
       <div class="header-top-container">
         <div class="header-top-container-1">
@@ -44,14 +41,19 @@
           </section>
 
           <section class="second-slider">
-            <input class="visually-hidden btn-1" type="radio" id="slide-1" name="toggle" checked>
-            <input class="visually-hidden btn-2" type="radio" id="slide-2" name="toggle">
-            <input class="visually-hidden btn-3" type="radio" id="slide-3" name="toggle">
+
+
+
             <div class="slider">
               <div class="slider-controls">
-                <label for="slide-1">Первый</label>
-                <label for="slide-2">Второй</label>
-                <label for="slide-3">Третий</label>
+                <input class="visually-hidden btn-10" type="radio" id="slide-1" name="toggle" checked>
+                <label class="slider-out" for="slide-1">Первый</label>
+
+                <input class="visually-hidden btn-11" type="radio" id="slide-2" name="toggle">
+                <label class="slider-out" for="slide-2">Второй</label>
+
+                <input class="visually-hidden btn-12" type="radio" id="slide-3" name="toggle">
+                <label class="slider-out" for="slide-3">Третий</label>
               </div>
 
     <!--          <input class="btn-1" type="radio" id="btn-1" name="toggle" checked>
