--- a/catalog.html
+++ b/catalog.html
@@ -65,7 +65,7 @@
 
           <fieldset class="price">
             <legend>Сетка:</legend>
-            <input class="btn-1" type="radio" name="grid" id="adaptive-item" value="adaptive">
+            <input class="btn-1" type="radio" name="grid" id="adaptive-item" value="adaptive" checked>
             <label class="btn btn-out-1" for="adaptive-item">Адаптивная</label>
 
             <input class="btn-2" type="radio" name="grid" id="fixed-item" value="fixed">
