--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+    <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
+    <input class="visually-hidden" type="radio" id="product-2" name="toggle">
+    <input class="visually-hidden" type="radio" id="product-3" name="toggle">
     <header class="header-top">
       <div class="header-top-container">
         <div class="header-top-container-1">
@@ -31,48 +34,30 @@
           </nav>
         </div>
         <div class="header-top-container-2">
-          <section class="privilege">
-            <div class="privilege-items">
-              <h2>Долго, дорого, скурпулезно</h2>
-              <p>Математически выверенный дизайн
-              для вашего сайта или мобильного приложения</p>
-              <a href="#">Узнать больше</a>
+          <section class="slider">
+            <div class="slider-controls">
+              <label for="product-first">Первый</label>
+              <label for="product-second">Второй</label>
+              <label for="product-third">Третий</label>
             </div>
-          </section>
-
-          <section class="second-slider">
-
-
-
-            <div class="slider">
-              <div class="slider-controls">
-                <input class="visually-hidden btn-10" type="radio" id="slide-1" name="toggle" checked>
-                <label class="slider-out" for="slide-1">Первый</label>
-
-                <input class="visually-hidden btn-11" type="radio" id="slide-2" name="toggle">
-                <label class="slider-out" for="slide-2">Второй</label>
-
-                <input class="visually-hidden btn-12" type="radio" id="slide-3" name="toggle">
-                <label class="slider-out" for="slide-3">Третий</label>
-              </div>
-
-    <!--          <input class="btn-1" type="radio" id="btn-1" name="toggle" checked>
-              <input class="btn-2" type="radio" id="btn-2" name="toggle">
-              <input class="btn-3" type="radio" id="btn-3" name="toggle">
-              <div class="slider-controls">
-                <label for="btn-1"></label>
-                <label for="btn-2"></label>
-                <label for="btn-3"></label>
-              </div>
-              <div class="slider-inner">
-                <div class="slider-slides">
-                  <img src="img/slide1.png" alt="фотография с телефонами" width="698" height="413">
-                  <img src="img/slide2.jpg" alt="фотография с двумя мониторами" width="663" height="430">
-                  <img src="img/slide3.jpg" alt="фотография с монитором и телефоном" width="759" height="411">
-                </div>
-              </div>
-          -->
-            </div>
+            <ul class="slider-list">
+              <li class="slider-item slide" id="slide1">
+                <h3 class="slide-title">Долго, дорого, скурпулезно</h3>
+                <p class="slide-paragraf">Математически выверенный дизайн
+                для вашего сайта или мобильного приложения</p>
+                <a class="slide-button" href="#">Узнать больше</a>
+              </li>
+              <li class="slider-item slide" id="slide2">
+                <h3 class="slide-title">Любим математику как никто другой</h3>
+                <p class="slide-paragraf">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+                <a class="slide-button" href="#">Узнать больше</a>
+              </li>
+              <li class="slider-item slide" id="slide3">
+                <h3 class="slide-title">Только ночь, только хардкор</h3>
+                <p class="slide-paragraf">Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+                <a class="slide-button" href="#">Узнать больше</a>
+              </li>
+            </ul>
           </section>
         </div>
       </div>
