--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <input class="visually-hidden" type="radio" id="product-1" name="toggle" checked>
-    <input class="visually-hidden" type="radio" id="product-2" name="toggle">
-    <input class="visually-hidden" type="radio" id="product-3" name="toggle">
+    <input class="visually-hidden" type="radio" id="product-first" name="toggle" checked>
+    <input class="visually-hidden" type="radio" id="product-second" name="toggle">
+    <input class="visually-hidden" type="radio" id="product-third" name="toggle">
     <header class="header-top">
       <div class="header-top-container">
         <div class="header-top-container-1">
