--- a/index.html
+++ b/index.html
@@ -168,10 +168,19 @@
         <p>Скидка 10% для друзей из социальных сетей.<p>
       </div>
     </footer>
-    <form class="form-input">
-      <label for="name"> Ваше имя:
-      </label>
-      <input type="text" id="name" name="name">
-    </form>
+
+    <section class="modal modal-login">
+      <h2>Напишите нам</h2>
+      <form class="login-form" action="#" method="post">
+        <label for="user-name">Ваше имя:</label>
+        <input type="text" id="user-name" name="user-name">
+      </form>
+      <button class="modal-close" type="button">
+        <span class="visually-hidden">Закрыть</span>
+      </button>
+    </section>
+
+  <script>
+  </script>
   </body>
 </html>
