--- a/catalog.html
+++ b/catalog.html
@@ -40,7 +40,7 @@
     <main class="content">
       <div class="flex-price">
         <div class="flex-price-form">
-        <form  class="prices" action="#" method="post" oninput="price-item.value=price.value">
+        <form  class="prices" action="https://echo.htmlacademy.ru" method="post" oninput="price-item.value=price.value">
           <fieldset class="filter-item">
             <legend>Стоимость:</legend>
             <div class="range-filter">
@@ -214,5 +214,7 @@
         <p>скидка 10% для друзей из социальных сетей.</p>
       </div>
     </footer>
+    <script src="js/popap.js">
+    </script>
   </body>
 </html>
