--- a/catalog.html
+++ b/catalog.html
@@ -210,7 +210,7 @@
       </ul>
 
       <div class="sale">
-        <h3>давайте дружить, это выгодно!</h3>
+        <h3>Давайте дружить, это выгодно!</h3>
         <p>скидка 10% для друзей из социальных сетей.</p>
       </div>
     </footer>
