--- a/index.html
+++ b/index.html
@@ -17,16 +17,12 @@
           <nav class="menu">
             <div class="menu-item-1">
               <a class="logo"><img src="img/logo.png" alt="Логотип Нёрдс студии" width="160" height="65"></a>
-              <div class="menu-item-1-container">
-                <ul class="site-nav">
-                  <li class="active"><a href="#studio">Студия</a></li>
-                  <li class="active"><a href="#client">Клиенты</a></li>
-                  <li class="active"><a href="catalog.html">Магазин</a></li>
-                  <li class="active"><a href="#contact">Контакты</a></li>
-                </ul>
-              </div>
-            </div>
-            <div class="menu-item-2">
+              <ul class="site-nav">
+                <li class="active"><a href="#studio">Студия</a></li>
+                <li class="active"><a href="#client">Клиенты</a></li>
+                <li class="active"><a href="catalog.html">Магазин</a></li>
+                <li class="active"><a href="#contact">Контакты</a></li>
+              </ul>
               <ul class="basket">
                 <li class="active"><a class="box" href="#"><img src="img/cart-icon.png" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
               </ul>
@@ -42,7 +38,7 @@
             </div>
             <ul class="slider-list">
               <li class="slider-item slide" id="slide1">
-                <h3 class="slide-title">Долго, дорого, скурпулезно</h3>
+                <h3 class="slide-title">Долго, дорого, скрупулезно.</h3>
                 <p class="slide-paragraf">Математически выверенный дизайн<br>
                 для вашего сайта или мобильного приложения</p>
                 <a class="slide-button" href="#">Узнать больше</a>
@@ -94,7 +90,7 @@
       <section id="studio" class="info-privilege">
         <h2 class="visually-hidden">Преимущества</h2>
         <div class="info">
-          <p class="info-item-1">Мы - маленькая, но гордая дизайн-студия из Краснодара.</p>
+          <p class="info-item-1">Мы &#8212; маленькая, но гордая дизайн-студия из Краснодара.</p>
           <p class="info-item-2">Исповедуем принципы минимализма и простоты. ставим математический расчет превыше креатива. Работаем не покладая рук, как роботы.</p>
           <p class="info-item-3">Выполняем заказы на разработку:</p>
 
