--- a/index.html
+++ b/index.html
@@ -8,9 +8,6 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <input class="visually-hidden" type="radio" id="product-first" name="toggle" checked>
-    <input class="visually-hidden" type="radio" id="product-second" name="toggle">
-    <input class="visually-hidden" type="radio" id="product-third" name="toggle">
     <header class="header-top">
       <div class="header-top-container">
         <div class="header-top-container-1">
@@ -29,39 +26,43 @@
             </div>
           </nav>
         </div>
-        <div class="header-top-container-2">
-          <section class="slider">
-            <div class="slider-controls">
-              <label for="product-first">Первый</label>
-              <label for="product-second">Второй</label>
-              <label for="product-third">Третий</label>
-            </div>
-            <ul class="slider-list">
-              <li class="slider-item slide" id="slide1">
-                <h3 class="slide-title">Долго, дорого, скрупулезно.</h3>
-                <p class="slide-paragraf">Математически выверенный дизайн<br>
-                для вашего сайта или мобильного приложения</p>
-                <a class="slide-button" href="#">Узнать больше</a>
-              </li>
-              <li class="slider-item slide" id="slide2">
-                <h3 class="slide-title">Любим математику как никто другой</h3>
-                <p class="slide-paragraf">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
-                <a class="slide-button" href="#">Узнать больше</a>
-              </li>
-              <li class="slider-item slide" id="slide3">
-                <h3 class="slide-title">Только ночь, только хардкор</h3>
-                <p class="slide-paragraf">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
-                <a class="slide-button" href="#">Узнать больше</a>
-              </li>
-            </ul>
-          </section>
-        </div>
       </div>
     </header>
 
     <main class="content">
+      <input class="visually-hidden sliders" type="radio" id="product-first" name="toggle" checked>
+      <input class="visually-hidden sliders" type="radio" id="product-second" name="toggle">
+      <input class="visually-hidden sliders" type="radio" id="product-third" name="toggle">
 
       <h1 class="visually-hidden">Дизайн студия «Nerds»</h1>
+
+      <div class="header-top-container-2">
+        <section class="slider">
+          <div class="slider-controls">
+            <label for="product-first">Первый</label>
+            <label for="product-second">Второй</label>
+            <label for="product-third">Третий</label>
+          </div>
+          <ul class="slider-list">
+            <li class="slider-item slide" id="slide1">
+              <h3 class="slide-title">Долго, дорого, скрупулезно.</h3>
+              <p class="slide-paragraf">Математически выверенный дизайн<br>
+              для вашего сайта или мобильного приложения</p>
+              <a class="slide-button" href="#">Узнать больше</a>
+            </li>
+            <li class="slider-item slide" id="slide2">
+              <h3 class="slide-title">Любим математику как никто другой</h3>
+              <p class="slide-paragraf">Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+              <a class="slide-button" href="#">Узнать больше</a>
+            </li>
+            <li class="slider-item slide" id="slide3">
+              <h3 class="slide-title">Только ночь, только хардкор</h3>
+              <p class="slide-paragraf">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
+              <a class="slide-button" href="#">Узнать больше</a>
+            </li>
+          </ul>
+        </section>
+      </div>
 
       <section class="services">
           <div class="services-item">
