--- a/catalog.html
+++ b/catalog.html
@@ -13,7 +13,7 @@
         <div class="header-top-container-1">
           <nav class="menu">
             <div class="menu-item-1">
-              <a class="logo" href="index.html"><img src="img/logo.png" alt="Логотип Нёрдс студии" width="160" height="65"></a>
+              <a class="logo" href="index.html"><img src="img/nerds-logo.svg" alt="Логотип Нёрдс студии" width="160" height="65"></a>
               <div class="menu-item-1-container">
                 <ul class="site-nav">
                   <li class="active"><a href="#">Студия</a></li>
@@ -25,7 +25,7 @@
             </div>
             <div class="menu-item-2">
               <ul class="basket">
-                <li class="active"><a class="box" href="#"><img src="img/cart-icon.png" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
+                <li class="active"><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
               </ul>
             </div>
           </nav>
@@ -204,9 +204,9 @@
     <footer class="footer-main">
 
       <ul>
-        <li><a href="#"><img src="img/vk-icon.png" width="26" height="15" alt="ВК"></a></li>
-        <li><a href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Фейсбук"></a></li>
-        <li><a href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Инстаграм"></a></li>
+        <li><a href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="ВК"></a></li>
+        <li><a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+        <li><a href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Инстаграм"></a></li>
       </ul>
 
       <div class="sale">
