--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="header-top-container-1">
           <nav class="menu">
             <div class="menu-item-1">
-              <a class="logo"><img src="img/logo.png" alt="Логотип Нёрдс студии" width="160" height="65"></a>
+              <a class="logo"><img src="img/nerds-logo.svg" alt="Логотип Нёрдс студии" width="160" height="65"></a>
               <ul class="site-nav">
                 <li class="active"><a href="#studio">Студия</a></li>
                 <li class="active"><a href="#client">Клиенты</a></li>
@@ -21,7 +21,7 @@
                 <li class="active"><a href="#contact">Контакты</a></li>
               </ul>
               <ul class="basket">
-                <li class="active"><a class="box" href="#"><img src="img/cart-icon.png" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
+                <li class="active"><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
               </ul>
             </div>
           </nav>
@@ -153,9 +153,9 @@
 
     <footer class="footer-main">
       <ul>
-        <li><a href="#"><img src="img/vk-icon.png" width="26" height="15" alt="ВК"></a></li>
-        <li><a href="#"><img src="img/fb-icon.png" width="12" height="22" alt="Фейсбук"></a></li>
-        <li><a href="#"><img src="img/insta-icon.png" width="21" height="21" alt="Инстаграм"></a></li>
+        <li><a href="#"><img src="img/vk-icon.svg" width="26" height="15" alt="ВК"></a></li>
+        <li><a href="#"><img src="img/fb-icon.svg" width="12" height="22" alt="Фейсбук"></a></li>
+        <li><a href="#"><img src="img/insta-icon.svg" width="21" height="21" alt="Инстаграм"></a></li>
       </ul>
 
       <div class="sale">
