--- a/index.html
+++ b/index.html
@@ -14,15 +14,17 @@
           <nav class="menu">
             <div class="menu-item-1">
               <a class="logo"><img src="img/nerds-logo.svg" alt="Логотип Нёрдс студии" width="160" height="65"></a>
-              <ul class="site-nav">
-                <li class="active"><a href="#studio">Студия</a></li>
-                <li class="active"><a href="#client">Клиенты</a></li>
-                <li class="active"><a href="catalog.html">Магазин</a></li>
-                <li class="active"><a href="#contact">Контакты</a></li>
-              </ul>
-              <ul class="basket">
-                <li class="active"><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
-              </ul>
+            <!--  <div class="menu-item-3"> -->
+                <ul class="site-nav">
+                  <li class="active"><a href="#studio">Студия</a></li>
+                  <li class="active"><a href="#client">Клиенты</a></li>
+                  <li class="active"><a href="catalog.html">Магазин</a></li>
+                  <li class="active"><a href="#contact">Контакты</a></li>
+                </ul>
+                <ul class="basket">
+                  <li class="active"><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
+                </ul>
+            <!--  </div> -->
             </div>
           </nav>
         </div>
