--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
           <nav class="menu">
             <div class="menu-item-1">
               <a class="logo"><img src="img/nerds-logo.svg" alt="Логотип Нёрдс студии" width="160" height="65"></a>
-            <!--  <div class="menu-item-3"> -->
                 <ul class="site-nav">
                   <li class="active"><a href="#studio">Студия</a></li>
                   <li class="active"><a href="#client">Клиенты</a></li>
@@ -22,9 +21,18 @@
                   <li class="active"><a href="#contact">Контакты</a></li>
                 </ul>
                 <ul class="basket">
-                  <li class="active"><a class="box" href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Иконка корзины">Корзина</a></li>
+                  <li class="active">
+                    <a class="box" href="#">
+                      <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                      	 width="15px" height="15px" viewBox="0 0 15 15" enable-background="new 0 0 15 15" xml:space="preserve">
+                      <g>
+                      	<circle cx="4.5" cy="13.5" r="1.5"/>
+                      	<circle cx="12.5" cy="13.5" r="1.5"/>
+                      	<polygon points="15,2 4.07,2 3.648,0 0,0 0,2 2.031,2 4.016,11 15,11 15,9 9.441,9 15,6.951 	"/>
+                      </g>
+                      </svg>
+                      Корзина</a></li>
                 </ul>
-            <!--  </div> -->
             </div>
           </nav>
         </div>
