--- a/catalog.html
+++ b/catalog.html
@@ -13,11 +13,11 @@
         <div class="header-top-container-1">
           <nav class="menu">
             <div class="menu-item-1">
-              <a class="logo"><img src="img/nerds-logo.svg" alt="Логотип Нёрдс студии" width="160" height="65"></a>
+              <a class="logo" href="index.html"><img src="img/nerds-logo.svg" alt="Логотип Нёрдс студии" width="160" height="65"></a>
                 <ul class="site-nav">
-                  <li class="active"><a href="#studio">Студия</a></li>
-                  <li class="active"><a href="#client">Клиенты</a></li>
-                  <li class="active"><a href="catalog.html">Магазин</a></li>
+                  <li class="active"><a href="index.html#studio">Студия</a></li>
+                  <li class="active"><a href="index.html#client">Клиенты</a></li>
+                  <li class="active now-catalog">Магазин</li>
                   <li class="active"><a href="#contact">Контакты</a></li>
                 </ul>
                 <ul class="basket">
@@ -47,7 +47,7 @@
       <div class="title-shop">
           <h2>Магазин готовых шаблонов</h2>
       </div>
-      
+
       <div class="flex-price">
         <div class="flex-price-form">
         <form  class="prices" action="https://echo.htmlacademy.ru" method="post" oninput="price-item.value=price.value">
