--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
       <section id="client" class="works">
         <h2 class="visually-hidden">Выполненные проекты</h2>
         <ul>
-          <li class="active-works"><a href="#"><img src="img/logo-1.png" alt="HTMLAcademy" width="199" height="68"></a></li>
+          <li class="active-works"><a href="https://htmlacademy.ru/intensive/htmlcss"><img src="img/logo-1.png" alt="HTMLAcademy" width="199" height="68"></a></li>
           <li class="active-works"><a href="#"><img src="img/logo-2.png" alt="borodinski" width="209" height="90"></a></li>
           <li class="active-works"><a href="#"><img src="img/logo-3.png" alt="pink" width="185" height="52"></a></li>
           <li class="active-works"><a href="#"><img src="img/logo-4.png" alt="mishka" width="173" height="84"></a></li>
