--- a/catalog.html
+++ b/catalog.html
@@ -17,7 +17,7 @@
                 <ul class="site-nav">
                   <li class="active"><a href="index.html#studio">Студия</a></li>
                   <li class="active"><a href="index.html#client">Клиенты</a></li>
-                  <li class="active now-catalog">Магазин</li>
+                  <li class="active now-catalog"><a href="#">Магазин</a></li>
                   <li class="active"><a href="#contact">Контакты</a></li>
                 </ul>
                 <ul class="basket">
@@ -56,7 +56,7 @@
             <div class="range-filter">
               <div class="range-controls">
                 <div class="scale">
-                  <div class="bar" style="margin-left: 20%; width: 30%">
+                  <div class="bar" style="margin-left: 0%; width: 65%">
                   </div>
                 </div>
                 <div class="toggle toggle-min">
