--- a/catalog.html
+++ b/catalog.html
@@ -5,7 +5,7 @@
     <title>Магазин: Нёрдс</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap&subset=cyrillic" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <header class="header-top">
@@ -249,7 +249,7 @@
       </button>
     </section>
 
-    <script src="js/popap.js">
+    <script src="js/popap.min.js">
     </script>
   </body>
 </html>
