--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
           <ul>
             <li><p class="info-item-4">Веб-сайтов любой сложности</p></li>
-            <li><p class="info-item-4">Мобильных приложений для ios и android</p></li>
+            <li><p class="info-item-4">Мобильных приложений для iOS и Android</p></li>
             <li><p class="info-item-4">Слайдшоу и видео для корпоративных презентаций</p></li>
           </ul>
         </div>
