--- a/catalog.html
+++ b/catalog.html
@@ -126,7 +126,7 @@
             <img src="img/img-sedona.jpg" width="360" height="576" alt="SEDONA">
             <span class="visually-hidden">арт. 001</span>
             <div class="sedona">
-              <h3>Sedona</h3>
+              <h3><a class="name-site" href="#">Sedona</a></h3>
               <p>Информационный сайт для туристов</p>
               <a class="active-catalog" href="">9 900 руб.</a>
             </div>
@@ -135,7 +135,7 @@
             <img src="img/img-pink.jpg" width="360" height="576" alt="PINK">
             <span class="visually-hidden">арт. 002</span>
             <div class="pink">
-              <h3>Pink</h3>
+              <h3><a class="name-site" href="#">Pink</a></h3>
               <p>Продуктовый лединг приложения для iOS и Androind</p>
               <a class="active-catalog" href="">9 900 руб.</a>
             </div>
@@ -144,7 +144,7 @@
             <img src="img/img-barbershop.jpg" width="360" height="576" alt="BORODINSKI">
             <span class="visually-hidden">арт. 003</span>
             <div class="BORODINSKI">
-              <h3>borodinski</h3>
+              <h3><a class="name-site" href="#">borodinski</a></h3>
               <p>Стрижка усов и бороды</p>
               <a class="active-catalog" href="">9 900 руб.</a>
             </div>
@@ -153,7 +153,7 @@
             <img src="img/img-mishka.jpg" width="360" height="576" alt="MISHKA">
             <span class="visually-hidden">арт. 004</span>
             <div class="MISHKA">
-              <h3>Mishka</h3>
+              <h3><a class="name-site" href="#">Mishka</a></h3>
               <p>Интернет магазин вещей сделанных своими руками</p>
               <a class="active-catalog" href="">9 900 руб.</a>
             </div>
@@ -162,7 +162,7 @@
             <img src="img/img-aplus.jpg" width="360" height="576" alt="A+">
             <span class="visually-hidden">арт. 005</span>
             <div class="A+">
-              <h3>A+</h3>
+              <h3><a class="name-site" href="#">A+</a></h3>
               <p>Образовательный центр</p>
               <a class="active-catalog" href="">9 900 руб.</a>
             </div>
@@ -171,7 +171,7 @@
             <img src="img/img-kvast.jpg" width="360" height="576" alt="магазин кваса">
             <span class="visually-hidden">арт. 006</span>
             <div class="KWAST">
-              <h3>Кваст</h3>
+              <h3><a class="name-site" href="#">Кваст</a></h3>
               <p>Интернет магазин крафтового кваса</p>
               <a class="active-catalog" href="">9 900 руб.</a>
             </div>
