перенос строки в слайдере

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
               <a class="slide-button" href="#">Узнать больше</a>
             </li>
             <li class="slider-item slide" id="slide3">
-              <h3 class="slide-title">Только ночь, только хардкор</h3>
+              <h3 class="slide-title">Только ночь,<br> только хардкор</h3>
               <p class="slide-paragraf">Работать днем, как все? Мы против этого.<br> Ближе к полуночи работа только начинается.</p>
               <a class="slide-button" href="#">Узнать больше</a>
             </li>
