disabled and href + first image

--- a/catalog.html
+++ b/catalog.html
@@ -126,54 +126,54 @@
             <img src="img/img-sedona.jpg" width="360" height="576" alt="SEDONA">
             <span class="visually-hidden">арт. 001</span>
             <div class="sedona">
-              <h3><a class="name-site" href="#">Sedona</a></h3>
+              <h3><a class="name-site" href="catalog-item.html">Sedona</a></h3>
               <p>Информационный сайт для туристов</p>
-              <a class="active-catalog" href="">9 900 руб.</a>
+              <a class="active-catalog" href="catalog-item.html">9 900 руб.</a>
             </div>
           </li>
           <li class="gallery-project-item">
             <img src="img/img-pink.jpg" width="360" height="576" alt="PINK">
             <span class="visually-hidden">арт. 002</span>
             <div class="pink">
-              <h3><a class="name-site" href="#">Pink</a></h3>
+              <h3><a class="name-site" href="catalog-item.html">Pink</a></h3>
               <p>Продуктовый лединг приложения для iOS и Androind</p>
-              <a class="active-catalog" href="">9 900 руб.</a>
+              <a class="active-catalog" href="catalog-item.html">9 900 руб.</a>
             </div>
           </li>
           <li class="gallery-project-item">
             <img src="img/img-barbershop.jpg" width="360" height="576" alt="BORODINSKI">
             <span class="visually-hidden">арт. 003</span>
             <div class="BORODINSKI">
-              <h3><a class="name-site" href="#">borodinski</a></h3>
+              <h3><a class="name-site" href="catalog-item.html">borodinski</a></h3>
               <p>Стрижка усов и бороды</p>
-              <a class="active-catalog" href="">9 900 руб.</a>
+              <a class="active-catalog" href="catalog-item.html">9 900 руб.</a>
             </div>
           </li>
           <li class="gallery-project-item">
             <img src="img/img-mishka.jpg" width="360" height="576" alt="MISHKA">
             <span class="visually-hidden">арт. 004</span>
             <div class="MISHKA">
-              <h3><a class="name-site" href="#">Mishka</a></h3>
+              <h3><a class="name-site" href="catalog-item.html">Mishka</a></h3>
               <p>Интернет магазин вещей сделанных своими руками</p>
-              <a class="active-catalog" href="">9 900 руб.</a>
+              <a class="active-catalog" href="catalog-item.html">9 900 руб.</a>
             </div>
           </li>
           <li class="gallery-project-item">
             <img src="img/img-aplus.jpg" width="360" height="576" alt="A+">
             <span class="visually-hidden">арт. 005</span>
             <div class="A+">
-              <h3><a class="name-site" href="#">A+</a></h3>
+              <h3><a class="name-site" href="catalog-item.html">A+</a></h3>
               <p>Образовательный центр</p>
-              <a class="active-catalog" href="">9 900 руб.</a>
+              <a class="active-catalog" href="catalog-item.html">9 900 руб.</a>
             </div>
           </li>
           <li class="gallery-project-item">
             <img src="img/img-kvast.jpg" width="360" height="576" alt="магазин кваса">
             <span class="visually-hidden">арт. 006</span>
             <div class="KWAST">
-              <h3><a class="name-site" href="#">Кваст</a></h3>
+              <h3><a class="name-site" href="catalog-item.html">Кваст</a></h3>
               <p>Интернет магазин крафтового кваса</p>
-              <a class="active-catalog" href="">9 900 руб.</a>
+              <a class="active-catalog" href="catalog-item.html">9 900 руб.</a>
             </div>
           </li>
         </ul>
