--- a/index.html
+++ b/index.html
@@ -75,6 +75,7 @@
       </div>
 
       <section class="services">
+        <div class="servises-container">
           <div class="services-item">
             <img src="img/illustration-1.png" width="300" height="146" alt="Иконка веб-сайта">
             <h3>Веб-сайты</h3>
@@ -86,7 +87,7 @@
             <img src="img/illustration-2.png" width="300" height="146" alt="Иконка мобильных приложений">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в
-              appstore и google play</p>
+              appstore и google play</p>              
             <a href="#">Заказать</a>
           </div>
           <div class="services-item">
@@ -96,6 +97,7 @@
             насколько вы изумительны!</p>
             <a href="#">Заказать</a>
           </div>
+        </div>
       </section>
 
       <section id="studio" class="info-privilege">
