--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>HTML Academy: Нёрдс</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,400i,500,500i,700,700i,900,900i&display=swap&subset=cyrillic,cyrillic-ext,latin-ext" rel="stylesheet">
     <link href="css/normalize.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.min.css">
   </head>
   <body>
     <header class="header-top">
@@ -87,7 +87,7 @@
             <img src="img/illustration-2.png" width="300" height="146" alt="Иконка мобильных приложений">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в
-              appstore и google play</p>              
+              appstore и google play</p>
             <a href="#">Заказать</a>
           </div>
           <div class="services-item">
